crates/math-core/tests/snapshots/substitution_test__dblcolon--never.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\dblcolon b"
---
<math>
    <mi>a</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0.2778em">∶</mo>
    <mi>b</mi>
</math>
