crates/math-core/tests/snapshots/substitution_test__eqcolon--never.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\eqcolon b"
---
<math>
    <mi>a</mi>
    <mo rspace="0">=</mo>
    <mo lspace="0" rspace="0.2778em">∶</mo>
    <mi>b</mi>
</math>
