crates/math-core/tests/snapshots/substitution_test__eqqcolon--conventional.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\eqqcolon b"
---
<math>
    <mi>a</mi>
    <mo>≕</mo>
    <mi>b</mi>
</math>
