crates/math-core/tests/snapshots/substitution_test__never_Coloneq.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\Coloneq b"
---
<math>
    <mi>a</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0">∶</mo>
    <mo lspace="0">=</mo>
    <mi>b</mi>
</math>
