crates/math-core/tests/snapshots/substitution_test__never_eqqcolon.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\eqqcolon b"
---
<math>
    <mi>a</mi>
    <mo rspace="0">=</mo>
    <mo lspace="0" rspace="0.2778em">∶</mo>
    <mi>b</mi>
</math>
