crates/math-core/tests/snapshots/substitution_test__via_macro--conventional.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\mycoloneqq b"
---
<math>
    <mi>a</mi>
    <mo>≔</mo>
    <mi>b</mi>
</math>
